@@ -2,7 +2,7 @@
  * PlantUML : a free UML diagram generator
  * ========================================================================
  *
- * (C) Copyright 2009-2020, Arnaud Roques
+ * (C) Copyright 2009-2023, Arnaud Roques
  *
  * Project Info:  https://plantuml.com
  * 
@@ -61,7 +61,7 @@ public class Segment {
 
 	@Override
 	public int hashCode() {
-		return new Double(pos1).hashCode() + new Double(pos2).hashCode();
+		return Double.valueOf(pos1).hashCode() + Double.valueOf(pos2).hashCode();
 	}
 
 	final public boolean contains(double y) {
@@ -94,27 +94,31 @@ public class Segment {
 	}
 
 	public Collection<Segment> cutSegmentIfNeed(Collection<Segment> allDelays) {
-		final List<Segment> sortedDelay = new ArrayList<Segment>(allDelays);
+		final List<Segment> sortedDelay = new ArrayList<>(allDelays);
 		Collections.sort(sortedDelay, new SortPos1());
-		final List<Segment> result2 = new ArrayList<Segment>();
+		final List<Segment> result2 = new ArrayList<>();
 		double pendingStart = pos1;
-		for (Segment d : sortedDelay) {
-			if (d.pos1 <= pendingStart) {
+		for (Segment pause : sortedDelay) {
+			if (pause.pos1 == pendingStart) {
+				pendingStart = pause.pos2;
 				continue;
 			}
-			if (d.pos1 > this.pos2) {
-				result2.add(new Segment(pendingStart, this.pos2));
+			if (pause.pos1 < pendingStart) {
+				continue;
+			}
+			if (pause.pos1 > this.pos2) {
+				if (pendingStart < this.pos2)
+					result2.add(new Segment(pendingStart, this.pos2));
 				return Collections.unmodifiableCollection(result2);
 			}
-			// if (this.contains(d) == false) {
-			// throw new IllegalStateException();
-			// }
-			if (this.contains(d)) {
-				result2.add(new Segment(pendingStart, d.pos1));
-				pendingStart = d.pos2;
+			if (this.contains(pause)) {
+				assert pendingStart < pause.pos1;
+				result2.add(new Segment(pendingStart, pause.pos1));
+				pendingStart = pause.pos2;
 			}
 		}
-		result2.add(new Segment(pendingStart, this.pos2));
+		if (pendingStart < this.pos2)
+			result2.add(new Segment(pendingStart, this.pos2));
 		return Collections.unmodifiableCollection(result2);
 	}
 
